# Cosmo-Analysis

./: .gitignore  README.md  analyse.py  outputlist_projection.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
scripts/: basic_analysis.ipynb
src/: __init__.py
src/cosmo_analysis.egg-info/: PKG-INFO  SOURCES.txt
src/cosmo_analysis/core/: constants.py  fields.py  sim_objs.py  sim_prop.py  utils.py
src/cosmo_analysis/io/: load.py
src/cosmo_analysis/plot/: plots.py
