[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-analysis"
version = "0.1.0"
description = "Analysis utilities for astro simulations"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pablo Granizo Cuadrado", email = "pablogranizopgc@gmail.com" }]
requires-python = ">=3.6"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.5",
  "yt>=4.0",
  "h5py",
  "scipy",
  "unyt",
  "Pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmo-analysis*"]
