[metadata]
name = cosmo_analysis
version = 0.0.0
description = Analysis utilities for astro simulations
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Granizo Cuadrado
author_email = pablogranizopgc@gmail.com
license = MIT

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
